# SafeEyes

./: .angular-cli.json  .editorconfig  .flake8  .git-blame-ignore-revs  .gitignore  3rdpartylicenses.txt  MANIFEST.in  README.md  _config.yml  build.sh  gitkraken.sh  index.html  inline.294884aa86fcedbae178.bundle.js  inline.3fd6ad80c3fb283f4945.bundle.js  install in development mode and run.sh  main.205c915f9e3c958274d4.bundle.js  main.2b6a7bc4a5be4ac75c9b.bundle.js  main.3756d472639bbb92386e.bundle.js  main.8d0a8bc8f19a9bda5394.bundle.js  main.95dfd75ed73693103388.bundle.js  package-lock.json  package.json  polyfills.4b808ce4b229f83caca7.bundle.js  polyfills.d148f71a177bd0c116e9.bundle.js  pyproject.toml  ruff.toml  run  run reset.sh  run.sh  safeeyes  safeeyes.cfg  setup.py  styles.3859661c2ee7da742b9e.bundle.css  styles.71111ad091d0f4c191d2.bundle.css  styles.dc1e6a7f0d8c4f5d24ba.bundle.css  update-po.sh  update-version.sh  validate_po.py  vendor.390bd8d14a6310bfe7c1.bundle.js  vendor.40abc23577e9804f14db.bundle.js
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  plugin-request.md
.github/workflows/: build-deb.yml  lint.yml  mypy.yml  pytest.yml  release.yml  test-action.yml  translations.yml
.reuse/: dep5
.run/: safeeyes.run.xml
.well-known/: org.flathub.VerifiedApps.txt
_includes/: clients.html  contact.html  contribute.html  customize.html  features.html  footer.html  head.html  header.html  modals.html  services.html
_layouts/: default.html
_posts/: 2014-07-08-project-11.markdown  2014-07-09-project-10.markdown  2014-07-10-project-9.markdown  2014-07-11-project-8.markdown  2014-07-12-project-7.markdown  2014-07-13-project-6.markdown  2014-07-14-project-5.markdown  2014-07-15-project-4.markdown  2014-07-16-project-3.markdown  2014-07-17-project-2.markdown  2014-07-18-project-1.markdown
_site/: feed.xml  index.html  style.css
css/: style.css
debian/: changelog  control  copyright  install  rules  safeeyes.install
e2e/: app.e2e-spec.ts
js/: script.js
rpm/: python-safeeyes.spec
safeeyes/: AboutDialog.py  BreakScreen.py  Notification.py  PluginManager.py  Plugins.py  SafeEyes.py  SafeEyesCore.py  SettingsDialog.py  TrayIcon.py  Utility.py  __init__.py  __main__.py  args.py  config.py  context.py  core.py  model.py  plugin_manager.py  rpc.py  safeeyes.py  settings.py  thread.py  translations.py  utility.py
safeeyes/breaks/: queue.py  scheduler.py  store.py
safeeyes/config/: safeeyes.json
safeeyes/config/lang/: ca.json  cs.json  de.json  en.json  es.json  et.json  fa.json  fr.json  ge.json  hi.json  hu.json  id.json  it.json  mk.json  nl.json  pl.json  pt.json  ru.json  sk.json  ta.json  tr.json  uk.json  vi.json  zh_Hans.json
safeeyes/config/locale/: safeeyes.pot
safeeyes/config/style/: safeeyes_style.css
safeeyes/debian/: changelog  control  copyright  install
safeeyes/env/: desktop.py  system.py
safeeyes/glade/: about_dialog.glade  break_screen.glade  item_bool.glade  item_break.glade  item_int.glade  item_plugin.glade  item_text.glade  new_break.glade  required_plugin_dialog.glade  settings_break.glade  settings_dialog.glade  settings_plugin.glade
safeeyes/platform/: io.github.slgobinath.SafeEyes.desktop  io.github.slgobinath.SafeEyes.metainfo.xml  safeeyes.desktop
safeeyes/plugin_utils/: error_repo.py  loader.py  manager.py  plugin.py  proxy.py
safeeyes/plugins/audiblealert/: config.json  dependency_checker.py  plugin.py
safeeyes/plugins/breakscreen/: config.json  plugin.py
safeeyes/plugins/donotdisturb/: config.json  dependency_checker.py  plugin.py  validator.py
safeeyes/plugins/healthstats/: config.json  dependency_checker.py  plugin.py  validator.py
safeeyes/plugins/limitconsecutiveskipping/: config.json  plugin.py
safeeyes/plugins/mediacontrol/: config.json  plugin.py
safeeyes/plugins/notification/: config.json  plugin.py
safeeyes/plugins/rpcserver/: config.json  plugin.py  validator.py
safeeyes/plugins/screensaver/: config.json  plugin.py
safeeyes/plugins/screenshare/: config.json  dependency_checker.py  plugin.py
safeeyes/plugins/skipfullscreen/: config.json  plugin.py
safeeyes/plugins/smartpause/: config.json  dependency_checker.py  ext_idle_notify.py  gnome_dbus.py  interface.py  plugin.py  swayidle.py  validator.py  x11.py
safeeyes/plugins/trayicon/: config.json  dependency_checker.py  plugin.py
safeeyes/safeeyes/: AboutDialog.py  BreakScreen.py  Notification.py  SafeEyesCore.py  SettingsDialog.py  TrayIcon.py  Utility.py  safeeyes
safeeyes/safeeyes/config/: safeeyes.json
safeeyes/safeeyes/glade/: about_dialog.glade  break_screen.glade  settings_dialog.glade
safeeyes/share/applications/: safeeyes.desktop
safeeyes/spi/: api.py  breaks.py  plugin.py  state.py
safeeyes/tests/: test_core.py  test_model.py
safeeyes/tests/breaks/: test_queue.py  test_store.py
safeeyes/tests/util/: test_env.py
safeeyes/ui/: UIManager.py  about_dialog.py  break_screen.py  manager.py  required_plugin_dialog.py  settings_dialog.py
safeeyes/util/: env.py  locale.py
share/applications/: safeeyes.desktop
src/: index.html  styles.css
src/app/: app.component.css  app.component.html  app.component.ts  app.module.ts  utility.service.spec.ts  utility.service.ts
src/app/contribute/: contribute.component.css  contribute.component.html  contribute.component.spec.ts  contribute.component.ts
src/app/features/: features.component.css  features.component.html  features.component.spec.ts  features.component.ts
src/app/header/: header.component.css  header.component.html
src/app/installation/: installation.component.css  (+3 more)
(+77 files in other folders)
