[project]
name = "safeeyes"
version = "3.1.0"
description = "Protect your eyes from eye strain using this continuous breaks reminder."
license = {text = "GPL-3.0-or-later"}
keywords = ["linux utility health eye-strain safe-eyes"]
readme = "README.md"
authors = [
    {name = "Gobinath Loganathan", email = "slgobinath@gmail.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: X11 Applications :: GTK",
    "Environment :: Other Environment",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "PyGObject",
    "babel",
    "packaging",
    "python-xlib"
]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/slgobinath/SafeEyes"
Downloads = "https://github.com/slgobinath/SafeEyes/archive/v3.1.0.tar.gz"

[project.scripts]
safeeyes = "safeeyes.__main__:main"

[project.optional-dependencies]
healthstats = ["croniter"]
wayland = ["pywayland"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include=["safeeyes*"]
exclude=["safeeyes.tests*"]

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "scripts"},
    {include-group = "tests"},
    {include-group = "types"},
]
lint = [
    "ruff==0.11.2"
]
scripts = [
    "polib==1.2.0"
]
types = [
    "mypy==1.15.0",
    "PyGObject-stubs==2.13.0",
    "types-croniter==5.0.1.20250322",
    "types-python-xlib==0.33.0.20240407",
    {include-group = "tests"},
]
tests = [
    "pytest==8.3.5",
    "time-machine==2.16.0",
]

[tool.mypy]
# catch typos in configuration file
warn_unused_configs = true
disallow_any_unimported = true
#check_untyped_defs = true
warn_unused_ignores = true
warn_unreachable = true
enable_error_code = [
    "ignore-without-code",
    "possibly-undefined"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
